--- a/index.html
+++ b/index.html
@@ -159,10 +159,10 @@
                 Nous cherchons des bibliothèques, des associations et des voisins pour tester de nouveaux usages :
             </p>
             <div class="tags">
-                <span id="tag-clubs" class="tag">📚 Clubs de lecture</span>
-                <span id="tag-boxes" class="tag">🏘️ Boîtes à livres connectées</span>
-                <span id="tag-assoc" class="tag">🏢 Bibliothèques associatives</span>
-                <span id="tag-centers" class="tag">🗂️ Centres de documentation</span>
+                <span class="tag"><svg class="tag-icon" aria-hidden="true" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg"><path d="M6 8a2 2 0 012-2h10a2 2 0 012 2v32a2 2 0 01-2 2H8a2 2 0 01-2-2V8z" fill="#2563eb"/><path d="M20 10l4-4 4 4v28l-4-3-4 3V10z" fill="#1e40af"/><path d="M28 8a2 2 0 012-2h10a2 2 0 012 2v32a2 2 0 01-2 2H30a2 2 0 01-2-2V8z" fill="#2563eb"/></svg> <span id="tag-clubs">Clubs de lecture</span></span>
+                <span class="tag"><svg class="tag-icon" aria-hidden="true" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg"><path d="M8 22l10-10 6 6 8-8 8 8v22H8V22z" fill="#93c5fd"/><path d="M4 42h40v4H4z" fill="#2563eb"/><rect x="14" y="28" width="6" height="14" rx="1" fill="#2563eb"/><rect x="28" y="24" width="6" height="18" rx="1" fill="#2563eb"/><circle cx="36" cy="10" r="3" fill="#2563eb"/><circle cx="18" cy="16" r="3" fill="#2563eb"/><path d="M18 16l7-3M29 13l7-3" stroke="#2563eb" stroke-width="1.5"/></svg> <span id="tag-boxes">Boîtes à livres connectées</span></span>
+                <span class="tag"><svg class="tag-icon" aria-hidden="true" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg"><rect x="8" y="16" width="32" height="28" rx="2" fill="#2563eb"/><path d="M14 16V10a10 10 0 0120 0v6" fill="none" stroke="#2563eb" stroke-width="4"/><rect x="16" y="22" width="16" height="14" rx="2" fill="#fff"/><path d="M20 22h8v6l-4 3-4-3z" fill="#93c5fd"/><circle cx="24" cy="12" r="4" fill="#93c5fd"/></svg> <span id="tag-assoc">Bibliothèques associatives</span></span>
+                <span class="tag"><svg class="tag-icon" aria-hidden="true" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg"><rect x="6" y="6" width="28" height="36" rx="3" fill="#2563eb"/><rect x="12" y="14" width="16" height="2.5" rx="1" fill="#fff"/><rect x="12" y="20" width="12" height="2.5" rx="1" fill="#93c5fd"/><rect x="12" y="26" width="14" height="2.5" rx="1" fill="#93c5fd"/><rect x="12" y="32" width="10" height="2.5" rx="1" fill="#93c5fd"/><rect x="14" y="2" width="28" height="36" rx="3" fill="#93c5fd" opacity="0.4"/></svg> <span id="tag-centers">Centres de documentation</span></span>
             </div>
         </div>
     </section>
@@ -247,10 +247,10 @@
                 feature_modular_desc: "Une application qui s'adapte à votre usage : lecteur, famille, association, bibliothécaire, libraire ou enseignant.",
                 exp_title: "Expérimentons ensemble",
                 exp_desc: "BiblioGenius est un projet citoyen. <br>Nous cherchons des bibliothèques, des associations et des voisins pour tester de nouveaux usages :",
-                tag_clubs: "📚 Clubs de lecture",
-                tag_boxes: "🏘️ Boîtes à livres connectées",
-                tag_assoc: "🏢 Bibliothèques associatives",
-                tag_centers: "🗂️ Centres de documentation",
+                tag_clubs: "Clubs de lecture",
+                tag_boxes: "Boîtes à livres connectées",
+                tag_assoc: "Bibliothèques associatives",
+                tag_centers: "Centres de documentation",
                 footer_title: "Rejoignez l'aventure",
                 footer_contribute: "➜ Espace Contributeurs",
                 footer_tutorials: "➜ Tutoriels Vidéo",
@@ -280,10 +280,10 @@
                 feature_modular_desc: "An app that adapts to your needs: reader, family, association, librarian, bookseller, or teacher.",
                 exp_title: "Let's experiment together",
                 exp_desc: "BiblioGenius is a civic project. <br>We are looking for libraries, associations, and neighbors to test new uses:",
-                tag_clubs: "📚 Book Clubs",
-                tag_boxes: "🏘️ Connected Book Boxes",
-                tag_assoc: "🏢 Community Libraries",
-                tag_centers: "🗂️ Documentation Centers",
+                tag_clubs: "Book Clubs",
+                tag_boxes: "Connected Book Boxes",
+                tag_assoc: "Community Libraries",
+                tag_centers: "Documentation Centers",
                 footer_title: "Join the adventure",
                 footer_contribute: "➜ Contributors Space",
                 footer_tutorials: "➜ Video Tutorials",
@@ -313,10 +313,10 @@
                 feature_modular_desc: "Una aplicación que se adapta a tu uso: lector, familia, asociación, bibliotecario, librero o profesor.",
                 exp_title: "Experimentemos juntos",
                 exp_desc: "BiblioGenius es un proyecto ciudadano. <br>Buscamos bibliotecas, asociaciones y vecinos para probar nuevos usos:",
-                tag_clubs: "📚 Clubes de lectura",
-                tag_boxes: "🏘️ Cajas de libros conectadas",
-                tag_assoc: "🏢 Bibliotecas asociativas",
-                tag_centers: "🗂️ Centros de documentación",
+                tag_clubs: "Clubes de lectura",
+                tag_boxes: "Cajas de libros conectadas",
+                tag_assoc: "Bibliotecas asociativas",
+                tag_centers: "Centros de documentación",
                 footer_title: "Únete a la aventura",
                 footer_contribute: "➜ Espacio de Colaboradores",
                 footer_tutorials: "➜ Tutoriales en Video",
@@ -346,10 +346,10 @@
                 feature_modular_desc: "Eine App, die sich an Ihre Bedürfnisse anpasst: Leser, Familie, Verein, Bibliothekar, Buchhändler oder Lehrer.",
                 exp_title: "Lassen Sie uns gemeinsam experimentieren",
                 exp_desc: "BiblioGenius ist ein Bürgerprojekt. <br>Wir suchen Bibliotheken, Vereine und Nachbarn, um neue Nutzungsmöglichkeiten zu testen:",
-                tag_clubs: "📚 Buchclubs",
-                tag_boxes: "🏘️ Vernetzte Bücherboxen",
-                tag_assoc: "🏢 Vereinsbibliotheken",
-                tag_centers: "🗂️ Dokumentationszentren",
+                tag_clubs: "Buchclubs",
+                tag_boxes: "Vernetzte Bücherboxen",
+                tag_assoc: "Vereinsbibliotheken",
+                tag_centers: "Dokumentationszentren",
                 footer_title: "Mach mit beim Abenteuer",
                 footer_contribute: "➜ Bereich für Mitwirkende",
                 footer_tutorials: "➜ Videoanleitungen",
